# Mini-Hackathon3

./: .env.example  .gitignore  DATA_FLOW.md  FahMai_RAG_Colab.ipynb  OVERVIEW.md  QWEN.md  README.md  main.py  pyproject.toml  requirements.txt
output/: submission_0.25_1.00.csv  submission_01.csv  submission_021.csv  submission_100.csv  submission_100pc.csv  submission_new.csv  submission_perfect_1.00.csv  submission_perfect_final.csv
src/: __init__.py  answer_selector.py  answer_selector_thai.py  embeddings.py  keyword_index.py  llm_selector.py  pipeline.py  preprocessing.py  retrieval.py
