[project]
name = "mini-hackathon3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "markdown>=3.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pythainlp>=5.0.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.51.0",
]
